--- a/projects/openssl.org/package.yml
+++ b/projects/openssl.org/package.yml
@@ -3,14 +3,15 @@
 # on linux we grab the curl certs (usually these are package as ca-certificates)
 
 distributable:
-  url: https://github.com/openssl/openssl/archive/refs/tags/OpenSSL_1_1_1q.tar.gz
+  url: https://www.openssl.org/source/openssl-{{version.raw}}.tar.gz
+  sha: ${{url}}.sha256
+  sig: ${{url}}.asc
   strip-components: 1
 
 versions:
-  - 1.1.118
-  # TODO
+  - 1.1.1s
   # github: openssl/openssl
-  # parser: version-parser.ts
+  # transform: /^OpenSSL_(\d+)_(\d+)_(\d+\w)$/$1.$2.$3/
 
 provides:
   - bin/openssl
