this might be the right fix to all the llvm^15 breakage

--- a/projects/tea.xyz/gx/cc/package.yml
+++ b/projects/tea.xyz/gx/cc/package.yml
@@ -7,7 +7,9 @@ versions:
 
 dependencies:
   linux:
-    llvm.org: '*'
+    llvm.org: '<15'   # Right now, at least 8 packages don't build with llvm^15 in the environment.
+                      # There shouldn't be any particular harm with limiting this for now. But, it
+                      # should definitely be FIXME.
   darwin:
     apple.com/xcode/clt: '*'
 
