cleanup and cleanup

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -202,13 +202,11 @@ jobs:
         with:
           name: ${{ matrix.platform.tag || matrix.platform.os }}
 
-      - run: |
-          ls -la
-          file ${{ matrix.platform.tag || matrix.platform.os }}
-          tea.xyz/var/pantry/scripts/cache-artifacts.ts \
-            ${{github.repository}} \
-            ${{github.ref}} \
-            ${{matrix.platform.name}} \
+      - run:
+          tea.xyz/var/pantry/scripts/cache-artifacts.ts
+            ${{github.repository}}
+            ${{github.ref}}
+            ${{matrix.platform.name}}
             artifacts.tgz
         env:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_CACHE }}
