--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,6 +3,7 @@ on:
   push:
    branches:
    - main
+   - use-PR-artifacts
 
 jobs:
   cd:
@@ -10,24 +11,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: >
-          grep -E '  github: [^\w]+/[^\w]+' projects/**/package.yml |
+          grep -E '  github: [^\w]+/[^\w/]+' projects/**/package.yml |
           sed -e 's|^projects/\(.*\)/package.yml: *github: \([^/]*/[^/]*\).*|{ "project": "\1", "github": "\2" }|' |
           jq -sc . |
           curl https://app.tea.xyz/api/receiveWatcherProjects --fail -X PUT \
             -H "content-type: application/json" -H "authorization: bearer ${{ secrets.TEA_API_TOKEN }}" -d @-
-  get-diff:
-    runs-on: ubuntu-latest
-    outputs:
-      diff: ${{ steps.diff.outputs.diff }}
-    steps:
-      - uses: actions/checkout@v3
-      - uses: technote-space/get-diff-action@v6
-        id: diff
-        with:
-          PATTERNS: projects/**/package.yml
   bottle:
-    needs: [get-diff]
-    if: ${{ needs.get-diff.outputs.diff != '' }}
     uses: ./.github/workflows/bottle.yml
     with:
       merged: true
