Uploads artifacts to S3, bottles on a different workflow

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,26 +10,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: >
-          grep -E '  github: [^\w]+/[^\w]+' projects/**/package.yml |
+          grep -E '  github: [^\w]+/[^\w/]+' projects/**/package.yml |
           sed -e 's|^projects/\(.*\)/package.yml: *github: \([^/]*/[^/]*\).*|{ "project": "\1", "github": "\2" }|' |
           jq -sc . |
           curl https://app.tea.xyz/api/receiveWatcherProjects --fail -X PUT \
             -H "content-type: application/json" -H "authorization: bearer ${{ secrets.TEA_API_TOKEN }}" -d @-
-  get-diff:
-    runs-on: ubuntu-latest
-    outputs:
-      diff: ${{ steps.diff.outputs.diff }}
-    steps:
-      - uses: actions/checkout@v3
-      - uses: technote-space/get-diff-action@v6
-        id: diff
-        with:
-          PATTERNS: projects/**/package.yml
-  build:
-    needs: [get-diff]
-    uses: ./.github/workflows/build.yml
-    with:
-      projects: ${{ needs.get-diff.outputs.diff }}
-      upload: true
+  bottle:
+    #FIXME: will fail (harmlessly) on non-merge/non-new-version runs
+    uses: ./.github/workflows/bottle.yml
     secrets: inherit
-    if: ${{ needs.get-diff.outputs.diff != '' }}
