--- a/.github/workflows/new-version.yml
+++ b/.github/workflows/new-version.yml
@@ -13,5 +13,8 @@ jobs:
     uses: ./.github/workflows/build.yml
     with:
       projects: ${{ inputs.projects }}
-      upload: true
+    secrets: inherit
+  bottle:
+    needs: [build]
+    uses: ./.github/workflows/bottle.yml
     secrets: inherit
