Tidy virtual-env creation script

--- a/projects/mesonbuild.com/package.yml
+++ b/projects/mesonbuild.com/package.yml
@@ -10,8 +10,7 @@ dependencies:
   gnu.org/bash: '>=2'  # for our venv/relocation scripts: feel free to fix that
 
 build:
-  script: |
-    python-venv.sh meson mesonbuild.com {{version}} {{prefix}} {{deps.python.org.version}} {{deps.python.org.version.major}} {{deps.python.org.version.minor}}
+  python-venv.sh "{{prefix}}/bin/meson"
 
 test:
   dependencies:
