--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -216,6 +216,6 @@ jobs:
             ${{matrix.platform.name}}
             artifacts.tgz
         env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_CACHE }}
+          AWS_S3_CACHE: ${{ secrets.AWS_S3_CACHE }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
