--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -18,7 +18,7 @@ jobs:
           REPO=$(echo ${{github.repository}} | sed -e 's_teaxyz/__')
           PR=$(echo ${{github.ref}} | sed -e 's_refs/pull/\(.*\)/merge_\1_')
 
-          aws s3 rm --recursive s3://$AWS_S3_BUCKET/pull-request/$REPO/$PR
+          aws s3 rm --recursive s3://$AWS_S3_CACHE/pull-request/$REPO/$PR
         if: startsWith(github.ref, 'refs/pull/') && startsWith(github.repository, 'teaxyz/pantry.')
         env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_CACHE }}
+          AWS_S3_CACHE: ${{ secrets.AWS_S3_CACHE }}
