get ruby versions from github

--- a/projects/ruby-lang.org/package.yml
+++ b/projects/ruby-lang.org/package.yml
@@ -1,11 +1,9 @@
 distributable:
-  url: https://cache.ruby-lang.org/pub/ruby/{{version.marketing}}/ruby-{{version}}.tar.gz
+  url: https://cache.ruby-lang.org/pub/ruby/{{version.marketing}}/ruby-{{version}}.tar.xz
   strip-components: 1
 
 versions:
-  - 3.1.2
-  - 2.7.6
-  #TODO github: ruby/ruby/tags
+  github: ruby/ruby/tags
 
 dependencies:
   openssl.org: ^1.1
