--- a/projects/ruby-lang.org/package.yml
+++ b/projects/ruby-lang.org/package.yml
@@ -17,13 +17,13 @@ build:
     tea.xyz/gx/cc: c99
     tea.xyz/gx/make: '*'
   script: |
-    ./configure --prefix="{{prefix}}" --enable-load-relative
+    ./configure --prefix="{{prefix}}" --enable-load-relative --disable-rubygems
     make --jobs {{hw.concurrency}} install
 
     cd "{{prefix}}"/bin
 
-    # we provide these as `rubygems.org`
-    rm bundle bundler gem rake rbs rdbg typeprof
+    # # we provide these as `rubygems.org`
+    # rm bundle bundler gem rake rbs rdbg typeprof
 
     for shim in $shims; do
       sed -i.bak -e 's_#!{{prefix}}/bin/ruby_#!/usr/bin/env ruby_' $shim
