--- a/projects/gnu.org/make/package.yml
+++ b/projects/gnu.org/make/package.yml
@@ -9,6 +9,10 @@ versions:
 provides:
   - bin/make
 
+interprets:
+  filename: Makefile
+  args: [make, --file]
+
 build:
   dependencies:
     gnu.org/m4: 1
