--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   cd:
     runs-on: ubuntu-latest
+    outputs:
+      HAS_SECRETS: ${{ secrets.AWS_S3_CACHE != '' }}
     steps:
       - uses: actions/checkout@v3
       - run: >
@@ -16,13 +18,15 @@ jobs:
           curl https://app.tea.xyz/api/receiveWatcherProjects --fail -X PUT \
             -H "content-type: application/json" -H "authorization: bearer ${{ secrets.TEA_API_TOKEN }}" -d @-
   bottle-pr:
+    needs: [cd]
     #FIXME: will fail (harmlessly) on non-merge/non-new-version runs, and won't work on 3rd-party PRs
-    if: ${{ secrets.AWS_S3_CACHE != '' }}
+    if: needs.cd.outputs.HAS_SECRETS
     uses: ./.github/workflows/bottle.yml
     secrets: inherit
   bottle-standalone:
     runs-on: ubuntu-latest
-    if: ${{ secrets.AWS_S3_CACHE == '' }}
+    needs: [cd]
+    if: ! needs.cd.outputs.HAS_SECRETS
     steps:
       - uses: actions/checkout@v3
       - uses: technote-space/get-diff-action@v6
