Changes for tea/cli 0.19

--- a/projects/gnu.org/bash/package.yml
+++ b/projects/gnu.org/bash/package.yml
@@ -11,6 +11,10 @@ provides:
   - bin/bash
   - bin/bashbug
 
+interprets:
+  extensions: bash
+  args: [bash, -e]
+
 build:
   dependencies:
     tea.xyz/gx/make: '*'
