--- a/.github/workflows/ci-scripts.yml
+++ b/.github/workflows/ci-scripts.yml
@@ -11,9 +11,9 @@ jobs:
       TEA_SECRET: ${{ secrets.TEA_SECRET }}
     steps:
       - uses: actions/checkout@v3
-
       - uses: teaxyz/setup@v0
-        with:
-          target: typecheck
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
+      - run: |
+          for x in *.ts; do
+            deno check --unstable --import-map=../import-map.json $x
+          done
+        working-directory: scripts
