--- a/projects/deno.land/package.yml
+++ b/projects/deno.land/package.yml
@@ -18,6 +18,7 @@ runtime:
     DENO_NO_UPDATE_CHECK: "true"
 
 build:
+  cores: 4
   script: |
     # https://github.com/denoland/deno/issues/15596 -- reported fixed in 1.25.3
     if test {{ version.major }} -eq 1 -a {{ version.minor }} -eq 25 -a {{ version.patch }} -lt 3; then
