--- a/.github/workflows/ci-scripts.yml
+++ b/.github/workflows/ci-scripts.yml
@@ -2,7 +2,9 @@ name: ci-scripts
 
 on:
   pull_request:
-    paths: [scripts/**.ts]
+    paths:
+      - scripts/**.ts
+      - import-map.json
 
 jobs:
   typecheck:
