--- a/.github/workflows/ci-scripts.yml
+++ b/.github/workflows/ci-scripts.yml
@@ -14,4 +14,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: teaxyz/setup@v0
-      - run: tea deno check --unstable --import-map=../import-map.json scripts/*.ts
+      - run: tea deno check --unstable --import-map=import-map.json scripts/*.ts
