--- a/projects/git-scm.org/package.yml
+++ b/projects/git-scm.org/package.yml
@@ -48,8 +48,8 @@ test: |
   test "$(git diff --name-only --cached)" = "testfile"
 
   # necessary so `git commit` will work
-  git config --global user.email "you@example.com"
-  git config --global user.name "Your Name"
+  git config user.email "you@example.com"
+  git config user.name "Your Name"
 
   # necessary to check the libexec binaries work
   git commit --message "test"
