--- a/projects/mesonbuild.com/package.yml
+++ b/projects/mesonbuild.com/package.yml
@@ -6,7 +6,7 @@ versions:
   github: mesonbuild/meson/tags
 
 dependencies:
-  python.org: 3
+  python.org: ^3
   gnu.org/bash: '>=2'  # for our venv/relocation scripts: feel free to fix that
 
 build:
@@ -14,7 +14,7 @@ build:
 
 test:
   dependencies:
-    ninja-build.org: 1
+    ninja-build.org: ^1
     tea.xyz/gx/cc: c99
   script: |
     meson ..
