looks like something in 1.66.0 broke arch detection for this one only.

--- a/projects/rust-lang.org/package.yml
+++ b/projects/rust-lang.org/package.yml
@@ -56,6 +56,9 @@ build:
 
     rm -rf {{prefix}}/share/doc
   env:
+    linux/aarch64:
+      ARGS:
+        - --build=aarch64-unknown-linux-gnu
     ARGS:
       - --enable-vendor
       - --prefix={{ prefix }}
