--- a/projects/rust-lang.org/package.yml
+++ b/projects/rust-lang.org/package.yml
@@ -36,6 +36,8 @@ dependencies:
 build:
   dependencies:
     tea.xyz/gx/make: '*'  #FIXME surely we don’t need make AND ninja
+    linux/aarch64:
+      gnu.org/gcc: '*' # libatomic
     cmake.org: ^3.20
     ninja-build.org: ^1.10
     python.org: 3
@@ -57,8 +59,7 @@ build:
     rm -rf {{prefix}}/share/doc
   env:
     linux/aarch64:
-      ARGS:
-        - --build=aarch64-unknown-linux-gnu
+      RUSTFLAGS: "-Clink_arg=-L{{deps.gnu.org/gcc.prefix}}/lib64"
     ARGS:
       - --enable-vendor
       - --prefix={{ prefix }}
