--- a/projects/llvm.org/package.yml
+++ b/projects/llvm.org/package.yml
@@ -59,6 +59,10 @@ build:
       - -DCLANG_DEFAULT_RTLIB=libgcc
       - -DCOMPILER_RT_INCLUDE_TESTS=OFF
       - -DCOMPILER_RT_USE_LIBCXX=OFF"
+    linux/aarch64:
+      ARGS:
+      # for outline-atomics
+      - -DLLVM_ENABLE_RUNTIMES=compiler-rt
 test:
   fixture: |
     #include <stdio.h>
