--- a/projects/tea.xyz/package.yml
+++ b/projects/tea.xyz/package.yml
@@ -1,5 +1,5 @@
 distributable:
-  url: https://github.com/teaxyz/cli/archive/refs/tags/v{{ version }}.tar.gz
+  url: https://github.com/teaxyz/cli/releases/download/v{{ version }}/tea-{{ version }}.tar.xz
   strip-components: 1
 
 versions:
@@ -8,30 +8,14 @@ versions:
 provides:
   - bin/tea
 
-dependencies:
-  # 1.25.0 - 1.25.2 panics on Linux for us
-  deno.land: '>=1.23 <1.25 || ^1.25.3'
-
 build:
-  script: |
-    sed -i.bak "s/^const version = .*$/const version = \"{{ version }}\"/" src/app.ts
-    rm src/app.ts.bak
+  dependencies:
+    deno.land: '>=1.23 <1.25 || ^1.25.3'
+    # ^^ 1.25.0 - 1.25.2 panics on Linux for us
+  working-directory: ${{prefix}}/bin
+  script:
+    deno task compile
 
-    mkdir -p {{ prefix }}/bin
-
-    deno compile \
-      --allow-read \
-      --allow-write \
-      --allow-net \
-      --allow-run \
-      --allow-env \
-      --unstable \
-      --import-map=./import-map.json \
-      --output {{ prefix }}/bin/tea \
-      ./src/app.ts
-
-test:
-  #TODO: build teaxyz/white-paper for better test
-  script: |
-    tea --version
-    test "$(tea --version)" = "tea {{ version }}"
+test: |
+  tea --version
+  test "$(tea --version)" = "tea {{ version }}"
