Remove `-E` it's not needed
Strictly this is preferable, but really it’s just making it harder for people to use our build infra.

Fixes https://github.com/teaxyz/cli/issues/304

--- a/projects/npmjs.com/package.yml
+++ b/projects/npmjs.com/package.yml
@@ -12,6 +12,10 @@ provides:
 dependencies:
   nodejs.org: '>=14'
 
+env:
+  runtime:
+    npm_config_prefix: ${{prefix}}
+
 build:
   script:
     node . install --global --prefix={{prefix}}
