--- a/projects/tea.xyz/package.yml
+++ b/projects/tea.xyz/package.yml
@@ -14,7 +14,7 @@ build:
     # ^^ 1.25.0 - 1.25.2 panics on Linux for us
   working-directory: ${{prefix}}/bin
   script:
-    deno task compile
+    deno --config "$SRCROOT"/deno.jsonc task compile
 
 test: |
   tea --version
