--- a/projects/tea.xyz/package.yml
+++ b/projects/tea.xyz/package.yml
@@ -1,6 +1,9 @@
 distributable:
   url: https://github.com/teaxyz/cli/releases/download/v{{ version }}/tea-{{ version }}.tar.xz
-  strip-components: 1
+  strip-components: 2
+  #FIXME I have no idea why we must strip TWO components
+  # when I manually extract the tarball it only has one but if we specify 1
+  # both here and manually it has that same component *still*
 
 versions:
   github: teaxyz/cli
