fix newer deno.land builds

--- a/projects/deno.land/package.yml
+++ b/projects/deno.land/package.yml
@@ -30,6 +30,10 @@ build:
       fi
     fi
 
+    # FIXME: until we unblock rust-lang.org>1.65.0, we need a feature flag
+    # to compile deno.land
+    git apply props/unzip_option_feature.diff
+
     cargo build --release
     mkdir -p "{{ prefix }}"/bin
     mv target/release/deno "{{ prefix }}"/bin
