nodejs.org: build static binary on linux/x86-64

--- a/projects/nodejs.org/package.yml
+++ b/projects/nodejs.org/package.yml
@@ -28,10 +28,20 @@ build:
     freedesktop.org/pkg-config: ^0.29
   script: |
     ./configure $ARGS
+
+    # FIXME: currently, dynamic builds of nodejs.org are segfaulting on linux/x86-64
+    if test "{{hw.platform}}/{{hw.arch}}" = "linux/x86-64"; then
+      for i in out/tools/v8_gypfiles/gen-regexp-special-case.target.mk out/test_crypto_engine.target.mk; do
+        if test -f "$i"; then
+          sed -i.bak -e 's/\-static//g' $i
+          rm $i.bak
+        fi
+      done
+    fi
+
     make --jobs {{ hw.concurrency }} install
   env:
     ARGS:
-    # we provide npm (well not yet, but we will)
     - --without-npm
     - --prefix={{ prefix }}
     # like, maybe we should include this?
@@ -39,6 +49,10 @@ build:
     - --with-intl=system-icu
     - --shared-openssl
     - --shared-zlib
+    linux/x86-64:
+      ARGS:
+      - --fully-static
+      - --enable-static
 
 test:
   script: |
