--- a/.github/workflows/index-data.yml
+++ b/.github/workflows/index-data.yml
@@ -7,18 +7,30 @@ on:
         required: true
         type: string
 
+env:
+  TEA_PANTRY_PATH: ${{ github.workspace }}/pantry
+
 jobs:
   queue_detail_ingestion:
     runs-on: ubuntu-latest
     needs: [bottle, upload]
     steps:
-      - uses: actions/checkout@v3
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
+      - name: co pantry
+        uses: actions/checkout@v3
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-      # - name: get github url if exists fro package.yml
-      #   run: bash extract projects/env.relative-paths
-      # TODO: aws sqs send-message --queue-url ${{secrets.SQS_GENERATE_PACKAGE_DETAILS_URL}} --message-body {s3_dist_key: env.relative-paths, github_url} dedup key 
+          path: pantry
+          repository: teaxyz/pantry.core
+
+      - uses: teaxyz/setup@v0
+        with:
+          # necessary because we currently require a `.git` directory
+          srcroot: pantry
+
+      - run: ./scripts/index-packages.ts ${{ inputs.projects }}
+        working-directory: pantry
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: us-east-1
+          TEA_PANTRY_PATH: ${{ env.TEA_PANTRY_PATH }}
+          SQS_GENERATE_PACKAGE_DETAILS_URL: ${{ secrets.SQS_GENERATE_PACKAGE_DETAILS_URL }}
