--- a/.github/workflows/index-data.yml
+++ b/.github/workflows/index-data.yml
@@ -13,21 +13,10 @@ env:
 jobs:
   queue_detail_ingestion:
     runs-on: ubuntu-latest
-    needs: [bottle, upload]
     steps:
-      - name: co pantry
-        uses: actions/checkout@v3
-        with:
-          path: pantry
-          repository: teaxyz/pantry.core
-
+      - uses: actions/checkout@v3
       - uses: teaxyz/setup@v0
-        with:
-          # necessary because we currently require a `.git` directory
-          srcroot: pantry
-
       - run: ./scripts/index-packages.ts ${{ inputs.projects }}
-        working-directory: pantry
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
