--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,5 @@
   "deno.enable": true,
   "deno.lint": true,
   "deno.unstable": true,
-  "deno.importMap": "import-map.json",
-  "deno.config": "tsconfig.json"
+  "deno.config": "deno.jsonc"
 }
