--- a/deno.jsonc
+++ b/deno.jsonc
@@ -20,4 +20,5 @@
     }
   },
   "importMap": "https://raw.githubusercontent.com/teaxyz/cli/v0.21/import-map.json"
+  // ^^ stuck in the past because we moved the import map into deno.json :-/
 }
